[package]
name = "fel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
git2 = "0.17.2"
octocrab = "0.29.3"
serde = {version = "1.0.186", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
git-url-parse = "0.4.4"
futures = "0.3.28"
parking_lot = "0.12.1"
tokio-stream = "0.1.14"
