[package]
name = "fel"
version = "0.5.0"
edition = "2021"
authors = ["Zach Anderson <zach@zabot.dev>"]
description = "A tool for transparently submitting stacked diffs to GitHub from git branches"
readme = "readme.md"
repository = "https://github.com/zabot/fel/"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.75"
git2 = "0.17.2"
octocrab = "0.29.3"
serde = {version = "1.0.186", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
git-url-parse = "0.4.4"
futures = "0.3.28"
parking_lot = "0.12.1"
tokio-stream = "0.1.14"
thiserror = "1.0.47"
clap = {version = "4.4.2", features = ["derive"]}
ansi_term = "0.12.1"
indicatif = "0.17.8"
