[metadata]
name = fel
version = 0.1.0
author = Zach Anderson
author_email = zach.inbox@gmail.com
description = A tool for pushing diffs to github
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = fel
python_requires = >=3.6

install_requires =
  GitPython @ git+https://github.com/gitpython-developers/GitPython.git
  PyGithub

[options.entry_points]
console_scripts =
    fel = fel:main
