[metadata]
name = fel
version = 0.1.3
author = Zach Anderson
author_email = zach.inbox@gmail.com
home_page = https://github.com/Zabot/fel
description = A tool for submitting and landing stacked diffs to GitHub
long_description = file: readme.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GNU General Public License v3 (GPLv3)
platform = OS Independent

[options]
packages = fel
python_requires = >=3.6

install_requires =
  GitPython >= 3.1.14
  PyGithub
  PyYAML

[options.entry_points]
console_scripts =
    fel = fel.__main__:main
